# backend/src/routes/authRoutes.js
@@ -5,5 +5,6 @@ const router =Router();
 
 router.post("/register", AuthController.register);
 router.post("/login", AuthController.login);
+router.post("/refresh", AuthController.refreshToken);
 
 export default router;
